--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>rsis on <%= title %></title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
+    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/cjs/react.development.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/cjs/react-dom.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script-->
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
@@ -16,8 +18,10 @@
     <div id="contents1"></div>
     <div id="contents2"></div>
     <div id="contents3"></div>
+    <div id="root">Привет, Я #Groot</div>
+    <div id="body1"></div>
 
-    <script src="/hello.js"></script>
+    <script src="/bundle.js"></script>
     
   </body>
 </html>
