--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -12,15 +12,20 @@
   </head>
 
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
-    <div id="contents1"></div>
-    <div id="contents2"></div>
-    <div id="contents3"></div>
-    <div id="root">Привет, Я #Groot</div>
-    <div id="body1"></div>
-
+    <div id="react-app">
+      
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
+      
+      <div id="body">
+        <div id="root">Привет, Я #Groot</div>
+        <div id="contents1"></div>
+        <div id="contents2"></div>
+        <div id="contents3"></div>
+      </div>
+      
+    </div>
+   
     <script src="/bundle.js"></script>
     
   </body>
