--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,36 +4,13 @@
     <title>rsis on <%= title %></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
-    
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.13.0/polyfill.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/cjs/react.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.7.0/cjs/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script-->
 
-    <link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' />
-    
+    <!--link rel='stylesheet' href='/bootstrap/css/bootstrap.min.css' /-->
+
   </head>
 
   <body>
-    <div id="react-app">
-      
-      <!-- div id="header">
-        <h1><%= title %></h1>
-        <p>Welcome to <%= title %></p>
-      </div-->
-        
-      <div id="react-container">
-        <div id="root">Привет, Я #Groot</div>
-        <div id="contents1"></div>
-        <div id="contents2"></div>
-        <div id="contents3"></div>
-      </div>
-      
-    </div>
-   
-    <script src="/bundle.js"></script>
-    
+    <div id="react-app"></div>   
+    <script src="/app.bundle.js"></script>    
   </body>
 </html>
