--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,11 @@
-html {
+html 
+{
     /*background: white;*/
     font: 24px Arial    
 }
 
-body {
+body 
+{
     /*background: rgba(0, 102, 255, 0.38);
     font-family: sans-serif;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
@@ -16,7 +18,8 @@ a   {
     /*color: #00B7FF;*/
     text-decoration: none;
 }
-a.hover {
+a.hover 
+{
     text-decoration-color: orangered;
     text-decoration: underline;
 }
@@ -25,24 +28,52 @@ p   {
     margin: 0 0 5px;
 }
 
+h6   {
+    margin: 0 0 5px;
+}
+
 .none {
     display: none !important;
 }
 
-hr.separate-elements {
+hr.separate-elements 
+{
+    margin: 24px auto 12px;
     border: 0;
     height: 1px;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(221, 221, 221, 0.0)), color-stop(0.5, rgba(221, 221, 221, 0.33)), to(rgba(221, 221, 221, 0.0)));
-    margin-left: auto;
+    background: 
+        -webkit-gradient(linear, left top, right top, 
+        from(rgba(221, 221, 221, 0.0)), 
+        color-stop(0.5, rgba(221, 221, 221, 0.33)), 
+        to(rgba(221, 221, 221, 0.0)));
+    /*margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 15px;*/
 }
 
-hr.separate {
-    margin-top: 35px;
-    margin-bottom: 25px;
+hr.separate 
+{
+    margin-top: 24px;   /*35*/
+    margin-bottom: 24px; /*25*/
     border: 0;
     height: 3px;
-    background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.0)), color-stop(0.5, rgba(0, 0, 0, 0.33)), to(rgba(0, 0, 0, 0.0)));
+    background: 
+        -webkit-gradient(linear, left top, right top, 
+        from(rgba(0, 0, 0, 0.0)), 
+        color-stop(0.5, rgba(0, 0, 0, 0.33)), 
+        to(rgba(0, 0, 0, 0.0)));
 }
+
+nav 
+{
+    /*height: 3vh;*/
+    margin: 0px;
+    float: left;
+    /*background-color: grey;*/
+}
+    
+nav.selected {
+    background-color: red;
+}
+    
