--- a/src/css/leftPanel.css
+++ b/src/css/leftPanel.css
@@ -6,9 +6,9 @@
   left: 0;
   height: 100%;
   background-color: #eee;
-  width: 199px;
-  border-right: 1px solid #ddd;
-  overflow-y: auto;
+  width: 200px;
+  /*border-right: 1px solid #ddd;*/
+  overflow: hidden;
 
   @media (max-width: 800px) 
   {
