--- a/src/css/menus.css
+++ b/src/css/menus.css
@@ -1,50 +1,63 @@
-#leftmenu, 
-#rightmenu {
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-    overflow-y: auto;
-    height: 20vh; 
-    }
+#leftmenu
+/*,#rightmenu */
+{    
+    height: 24vh; 
+}
 
-nav {
-    /*height: 3vh;*/
-    margin: 0px;
-    float: left;
-    /*background-color: grey;*/
-    }
+.main-menu 
+{
+    /*padding: 1em;*/
+    overflow: hidden;
+    display: flex;
+    flex-flow: row wrap;
+    width: 100%;
+    margin: 0.5em 0 0.5em 0;
+    /*float: left;*/
+    /*background-color: grey;*/    
+}
 
-nav.selected {
-    background-color: red;
-    }
 
-.main-menu {
-    height: 3em;
-    margin: 2px;
-    float: left;
-    /*background-color: grey;*/
-    }
+.main-menu a
+{
+    margin: 0;    
+    width: 200px;
+    padding: 0.25em 80% 0.25em 1em;
+}
 
-.main-menu.selected {
-    background-color: red;
-    }
+.main-menu a.active {
+    color: orangered;
+    font-weight: bold;
+    background-color: cyan;    
+}
 
-.right-menu {
+.main-menu ul {
+    padding-left: 0px;
+}
+
+.main-menu li 
+{
+    white-space: nowrap;
+    margin: 0.5em 0 0.5em 0;
+    list-style: none;
+}
+
+
+/*
+.right-menu 
+{
     list-style-type: none;
     display: block;
     height: 3em;
     margin: 2px;
     float: left;
-    /*background-color: grey;*/
-    }
+    /*background-color: grey;
+}
 
 .right-menu.selected {
     background-color: whitesmoke;
-    }
+}
 
 .right-menu li {
     margin: 0 0 0.5rem 0.5rem;
-    }
-
-.left-menu li {
-    margin: 0.5rem 0.5rem 0 0;
-    }
+}
+*/
