style of main-menu item from activeStyle to activeClassName in menus.css: .main-menu a.active

--- a/src/css/menus.css
+++ b/src/css/menus.css
@@ -27,7 +27,7 @@
 .main-menu a.active {
     color: orangered;
     font-weight: bold;
-    background-color: cyan;    
+    background-color: white;    
 }
 
 .main-menu ul {
