AgentEditorForm -> AgentSelector data loading added.

--- a/src/css/menus.css
+++ b/src/css/menus.css
@@ -41,6 +41,11 @@
     list-style: none;
 }
 
+.main-menu span
+{
+    /*white-space: nowrap;*/
+    vertical-align: text-top;
+}
 
 /*
 .right-menu 
